cabal-version: 3.0
name: hello-http
version: 0.1.0.0

executable hello-spock
    main-is: hello-spock.hs
    build-depends: base ^>=4.18.0.0, text ^>= 2.0.2, aeson ^>= 2.1.2.1, Spock ^>= 0.14.0.0, warp ^>= 3.3.28
    hs-source-dirs: .
    default-language: Haskell2010
    ghc-options: -O -Wall -threaded -with-rtsopts=-N -rtsopts

executable hello-scotty
    main-is: hello-scotty.hs
    build-depends: base ^>=4.18.0.0, text ^>= 2.0.2, aeson ^>= 2.1.2.1, scotty ^>= 0.12.1, warp ^>= 3.3.28
    hs-source-dirs: .
    default-language: Haskell2010
    ghc-options: -O -Wall -threaded -with-rtsopts=-N -rtsopts

executable hello-twain
    main-is: hello-twain.hs
    build-depends: base ^>=4.18.0.0, text ^>= 2.0.2, aeson ^>= 2.1.2.1, twain ^>= 2.1.2.0, warp ^>= 3.3.28
    hs-source-dirs: .
    default-language: Haskell2010
    ghc-options: -O -Wall -threaded -with-rtsopts=-N -rtsopts
